--- a/src/index.css
+++ b/src/index.css
@@ -44,20 +44,28 @@ body {
 	color: var(--text-color-500);
 }
 
+.app-container {
+	min-height: 100vh;
+	min-height: 100dvh; /* Modern viewport height for mobile */
+	display: flex;
+	flex-direction: column;
+}
+
+.separator {
+	border-bottom: 1px solid var(--separator-color);
+}
+
+.container {
+	max-width: var(--max-width);
+	margin-left: auto;
+	margin-right: auto;
+	padding: 0 16px;
+}
+
 a {
 	font-weight: 500;
 	color: inherit;
 	text-decoration: none;
-}
-
-.app-container {
-	min-height: 100vh;
-	min-height: 100dvh; /* Modern viewport height for mobile */
-
-	margin: 0 auto;
-
-	display: flex;
-	flex-direction: column;
 }
 
 h1 {
