--- a/src/Table.css
+++ b/src/Table.css
@@ -1,5 +1,5 @@
 .table-wrapper {
-	padding: 16px 0;
+	padding: 24px 0;
 }
 
 .table-actions {
@@ -16,6 +16,7 @@
 	border-radius: 4px;
 	color: var(--text-color-500);
 	font-size: var(--font-size-sm);
+	font-weight: var(--font-weight-600);
 	padding: 8px 16px;
 	cursor: pointer;
 }
@@ -28,23 +29,26 @@
 }
 
 .table-header {
-	padding: 12px;
+	padding: 16px 12px 16px 4px;
 	text-align: right;
 	border-top: 1px solid var(--separator-color);
 	font-size: var(--font-size-xsm);
 	color: var(--text-color-300);
-	font-weight: var(--text-weight-400);
+	font-weight: var(--font-weight-400);
 }
 
 .table-header:first-child {
 	text-align: left;
+	padding-left: 0;
+	padding-right: 156px;
+	font-weight: var(--font-weight-500);
 }
 
 .table-cell {
-	padding: 12px;
+	padding: 16px 12px 16px 4px;
 	font-size: var(--font-size-xsm);
 	color: var(--text-color-400);
-	font-weight: var(--text-weight-400);
+	font-weight: var(--font-weight-400);
 	text-align: right;
 }
 
@@ -63,7 +67,7 @@
 }
 
 .table-cell.main {
-	padding-left: 8px;
 	color: var(--text-color-500);
-	font-weight: var(--text-weight-500);
+	font-weight: var(--font-weight-500);
+	padding: 12px 0;
 }
