--- a/src/Tabs.css
+++ b/src/Tabs.css
@@ -2,7 +2,7 @@
 	display: flex;
 	justify-content: center;
 	position: relative;
-	bottom: 18px;
+	bottom: 16px;
 	height: 0px;
 }
 
@@ -14,15 +14,15 @@
 
 .tab-button {
 	height: 32px;
-	padding: 8px 16px;
+	padding: 8px 18px;
 	border: none;
 	background-color: var(--separator-color);
 	cursor: pointer;
 	color: var(--text-color-300);
+	font-size: var(--font-size-xsm);
 }
 
 .tab-button-active {
-	padding: 7px 16px;
 	background-color: var(--background-color);
 	border: 1px solid #626266;
 	border-radius: 4px;
