--- a/src/index.css
+++ b/src/index.css
@@ -46,8 +46,6 @@ letter-spacing: 0%; */
 
 :root {
 	font-family: 'Inter', sans-serif;
-	line-height: 1.5;
-	font-weight: 400;
 
 	--max-width: 1280px;
 	--background-color: #fcfcfd;
@@ -60,8 +58,10 @@ letter-spacing: 0%; */
 	--text-color-300: #626266;
 	--text-color-200: #8f8f91;
 
-	--text-weight-400: 400;
-	--text-weight-500: 500;
+	--font-weight-600: 600;
+	--font-weight-500: 500;
+	--font-weight-400: 400;
+	--font-weight-300: 300;
 
 	--font-size-xl: 1.75rem; /* 28px */
 	--font-size-lg: 1.125rem; /* 18px */
@@ -90,11 +90,15 @@ body {
 	max-width: var(--max-width);
 	margin-left: auto;
 	margin-right: auto;
-	padding: 0 16px;
+	padding: 0 24px;
 }
 
 .relative {
 	position: relative;
+}
+
+.mt-40 {
+	margin-top: 40px;
 }
 
 a {
@@ -104,10 +108,10 @@ a {
 
 h1 {
 	font-size: var(--font-size-xl);
-	font-weight: var(--text-weight-500);
+	font-weight: var(--font-weight-500);
 }
 
 h2 {
 	font-size: var(--font-size-m);
-	font-weight: var(--text-weight-500);
+	font-weight: var(--font-weight-500);
 }
